# libmpdclient

./: CMakeLists.txt
include/mpd/: config.h.in
